添加「屏幕显示图像的原理」

--- a/8/8.md
+++ b/8/8.md
@@ -11,3 +11,52 @@
 **线程存在于进程中**，共享进程的资源（包括它的堆空间）。**同一进程里的多个线程将共享同一个堆空间**。这跟进程大不相同，一个进程不能直接访问另一个进程的内存。不过，每个线程仍然会有自己的寄存器和栈，而其他线程可以读写堆内存。
 
 线程是进程的某条执行路径。当某个线程修改进程资源时，其他兄弟线程就会立即看到由此产生的变化。
+
+## TCP 和 UDP
+
+TCP 是一种面向连接的、可靠的全双工传输协议。
+
+## TCP
+
+https://mp.weixin.qq.com/s/nMO1KROhFuVjLkmufYi0Qg
+
+TCP 协议中的两个重要算法，**流量控制(Flow Control)**和**拥塞控制(Congestion Control)**像海尔兄弟一样。
+
+流量控制
+
+In data communications, flow control is the process of managing the rate of data transmission between two nodes to prevent a fast sender from overwhelming a slow receiver.
+
+It provides a mechanism for the receiver to control the transmission speed, so that the receiving node is not overwhelmed with data from transmitting node.
+
+可以看到流量控制是通信双方之间约定数据量的一种机制，具体来说是借助于TCP协议的确认ACK机制和窗口协议来完成的。
+
+
+
+窗口分为固定窗口和可变窗口，可变窗口也就是滑动窗口，简单来说就是通信双方根据接收方的接收情况动态告诉发送端可以发送的数据量，从而实现发送方和接收方的数据收发能力匹配。
+
+
+
+这个过程非常容易捕捉，使用wireshark在电脑上抓或者tcpdump在服务器上抓都可以看到
+
+可见流量控制是端到端微观层面的数据策略，双方在数据通信的过程中并不关心链路带宽情况，只关心通信双方的接收发送缓冲区的空间大小，可以说是个速率流量匹配策略。
+
+
+
+流量控制就像现实生活中物流领域中A和B两个仓库，A往B运送货物时只关心仓库B的剩余空间来调整自己的发货量，而不关心高速是否拥堵。
+
+2.2 拥塞控制的必要性
+前面我们提到了微观层面点到点的流量控制，但是我们不由地思考一个问题：只有流量控制够吗？答案是否定的。
+
+
+
+我们还需要一个宏观层面的控去避免网络链路的拥堵，否则再好的端到端流量控制算法也面临**丢包、乱序、重传**问题，只能造成恶性循环。
+
+如何感知拥塞
+
+TCP连接的发送方在向对端发送数据的过程中，需要根据当前的网络状况来调整发送速率，所以感知能力很关键。
+在TCP连接的发送方一般是基于丢包来判断当前网络是否发生拥塞，丢包可以由重传超时RTO和重复确认来做判断。
+
+3.4 拥塞控制过程详解
+我们以典型慢启动、拥塞避免、快速重传、快速恢复四个过程进行阐述。
+
+
