Add <Thread Specific Data>

--- a/8/8.md
+++ b/8/8.md
@@ -12,6 +12,16 @@
 
 线程是进程的某条执行路径。当某个线程修改进程资源时，其他兄弟线程就会立即看到由此产生的变化。
 
+### Thread Specific Data
+
+> 参考：[《多线程私有数据 pthread_key_create》](https://www.cnblogs.com/zhangxuan/p/6515264.html)
+
+在多线程的环境下，进程内的所有线程共享进程的数据空间。因此全局变量为所有线程共享。在程序设计中有时需要保存线程自己的全局变量，这种特殊的变量仅在线程内部有效。
+
+如常见的 `errno` ，它返回标准的错误码。`errno` 不应该是一个局部变量。几乎每个函数都应该可以访问它，但他又不能作为是一个全局变量。否则在一个线程里输出的很可能是另一个线程的出错信息，这个问题可以通过创建*线程的私有数据 (Thread Specific Data, TSD)* 来解决。在线程内部，私有数据可以被各个函数访问。但他对其他线程是屏蔽的。
+
+线程私有数据采用了**一键多值**的技术，即一个键对应多个值。访问数据时都是通过键值来访问，好像是对一个变量进行访问，其实是在访问不同的数据。
+
 ## TCP 和 UDP
 
 TCP 是一种面向连接的、可靠的全双工传输协议。
