--- a/8/8.md
+++ b/8/8.md
@@ -22,6 +22,31 @@
 
 线程私有数据采用了**一键多值**的技术，即一个键对应多个值。访问数据时都是通过键值来访问，好像是对一个变量进行访问，其实是在访问不同的数据。
 
+## Websocket
+
+> 下面的 HTTP 指 1.1 版本。参考：[Websocket](https://www.liaoxuefeng.com/wiki/1022910821149312/1103303693824096)
+
+WebSocket 是 HTML5 新增的协议，它的目的是在浏览器和服务器之间建立一个不受限的**双向通信的通道**，比如说，服务器可以在任意时刻发送消息给浏览器。
+
+为什么传统的 HTTP 协议不能做到 WebSocket 实现的功能？这是因为  HTTP 协议是一个 *请求－响应协议* ，请求必须先由浏览器发给服务器，服务器才能响应这个请求，再把数据发送给浏览器。换句话说，浏览器不主动请求，服务器是没法主动发数据给浏览器的。这样一来，要在浏览器中搞一个实时聊天，只能用轮询。
+
+## 半双工/全双工
+
+HTTP 是基于 TCP 的，是双工的。双工的两种模式：半双工（HTTP 1.0/1.1），全双工（HTTP 2.0）。
+
+- **半双工**：同一时间内，链接上只能有一方发送数据，另一方接受数据。
+  - HTTP 1.0 是短连接模式，每个请求都要建立新的 TCP 连接。
+  - HTTP 1.1 是长连接模式，可以多路复用，建立 TCP 连接。
+- **全双工**：同一时间内，两端都可以发送或接受数据。
+
+## HTTP2 / HTTP3 QUIC
+
+【待完善】
+
+## TCP 三次握手时，最后一个包丢了会怎样？
+
+【待完善】
+
 ## TCP 和 UDP
 
 TCP 是一种面向连接的、可靠的全双工传输协议。
